@@ -654,17 +654,16 @@ policy-marker:last-of-type		{padding-bottom:40px;}
 /*	Humanitarian Scope
 	============================================= */
 humanitarian-scope > *	{display:none;}
-humanitarian-scope		{width:880px; padding:0; margin:0 auto; color:#000;}
 humanitarian-scope:first-of-type:before	{content:"HUMANITARIAN SCOPE"; font-size:14px; color:#000; display:block; padding:0 0 10px 0; margin-bottom:20px; border-bottom:1px solid #000;}
-humanitarian-scope						{display:block; width:880px; padding:0; margin:0 auto; color:#000; line-height:24px;}
+humanitarian-scope						{display:block; width:880px; padding:0 0 10px 0; margin:0 auto; color:#000; line-height:24px;}
 humanitarian-scope:last-of-type			{padding-bottom:40px;}
-humanitarian-scope narrative			{display:block; font-style:italic; padding-bottom:10px;}
+humanitarian-scope narrative			{display:block; font-style:italic;}
 humanitarian-scope span-lang			{display:inline-block; vertical-align:top;}
 humanitarian-scope span-lang narrative	{display:block; font-style:initial; padding-bottom:0;}
 span-narrative.hum_scope_vocab,
 span-narrative.hum_scope_type,
 span-narrative.hum_scope_code	{display:inline-block; margin-left:5px; color:#000; font-size:13px; border:1px solid #000; border-radius:4px; padding:0px 4px; line-height:1.5em;}
-humanitarian-scope a			{display:inline; line-height:20px; margin-left:5px;}
+humanitarian-scope a			{display:inline;}
 humanitarian-scope a:link		{color:#000;}
 humanitarian-scope a:visited	{color:#000;}
 humanitarian-scope a:hover		{color:#000;}
