@@ -1,3 +1,9 @@
+Development Portal (2019-03-19 shi)
+==============================
+Update human-scope links as first narrative
+Update print-friendly css
+
+
 Development Portal (2019-03-18 shi)
 ==============================
 Display non-DAC sectors in SAVi
